# RecSys

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_user_item_scores.py
common/: __init__.py  logging.py
common/db/: __init__.py  engine.py  models.py  queries.py
common/kafka/: __init__.py  consumer.py  producer.py
common/models/: __init__.py  events.py  recommendations.py
consumer_service/: __init__.py  main.py
grafana/dashboards/: recsys.json
grafana/provisioning/dashboards/: dashboards.yml
ingestion_service/: __init__.py  main.py
prometheus/: prometheus.prod.yml  prometheus.yml
recommendation_api/: __init__.py  llm_reranker.py  main.py  middleware.py  routes.py
scripts/: simulate_traffic.py
tests/: test_consumer.py  test_ingestion.py  test_llm_reranker.py  test_recommendations.py
